--- a/src/.env.example
+++ b/src/.env.example
@@ -56,3 +56,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DYNAMODB_ENDPOINT=http://dynamodb:8000
+AWS_DEFAULT_REGION=us-west-2
+AWS_ACCESS_KEY_ID=dummy
+AWS_SECRET_ACCESS_KEY=dummy
